Using collect(Collectors.toList()) instead of stream.toList().